--- a/Part29_Reflection/Properties/launchSettings.json
+++ b/Part29_Reflection/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Part29_Reflection": {
-      "commandName": "Project",
-      "commandLineArgs": "Compress.exe /Out:<file name> /Help /Priority:RealTime|High|AboveNormal|Normal|BelowNormal|Idle"
+      "commandName": "Project"
     }
   }
 }
